<resources>
    <string name="app_name">Free Games</string>
    <string name="games_title">Trending free games</string>
    <string name="games">Games</string>
    <string name="play_later">Play Later</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="play_now_button">Play now</string>
    <string name="additional_information">Additional Information</string>
    <string name="developer">Developer</string>
    <string name="publisher">Publisher</string>
    <string name="platform">Platform</string>
    <string name="release_date">Release Date</string>
    <string name="genre">Genre</string>
    <string name="minimum_system_requirements">Minimum System Requirements</string>
    <string name="os">OS</string>
    <string name="processor">Processor</string>
    <string name="storage">Storage</string>
    <string name="memory">Memory</string>
    <string name="graphics">Graphics</string>
    <string name="error_title">Oopss!</string>
    <string name="error_message">Something went wrong, please try again later</string>
    <string name="error_refresh">Try Again</string>
    <string name="guest_name">Guest</string>
    <string name="edit_button">Edit Profile</string>
    <string name="edit_photo_button">Take new profile picture</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="save_profile">Save profile</string>
    <string name="guest_email">guest@hotmai.com</string>
</resources>