<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/additional_information"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/minimum_system_requirements"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginBottom="8dp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/os"
            android:textColor="@color/grey_light"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_os"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="teste"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/processor"
            android:textColor="@color/grey_light"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_processor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="teste"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/storage"
                    android:textColor="@color/grey_light"
                    android:textSize="18sp"
                    android:gravity="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_game_storage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="teste"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/memory"
                    android:textColor="@color/grey_light"
                    android:textSize="18sp"
                    android:gravity="center" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_game_memory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="teste"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:gravity="center" />

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/graphics"
            android:textColor="@color/grey_light"
            android:textSize="18sp"
            android:gravity="center" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_game_graphics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="teste"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:gravity="center" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.cardview.widget.CardView>