<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/grey_super_light">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_error"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_error"
        android:tint="@color/grey"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_title"
        android:textSize="24sp"
        android:layout_marginVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/tv_message"
        app:layout_constraintTop_toBottomOf="@id/iv_error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_message"
        android:textSize="18sp"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@id/tv_refresh"
        app:layout_constraintTop_toBottomOf="@id/tv_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/error_refresh"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:paddingHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:paddingVertical="6dp"
        android:background="@color/green_clickable"
        app:layout_constraintTop_toBottomOf="@id/tv_message"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>