<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.profile.ProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearance="@style/ShapeAppearance.Material3.Tooltip"
        android:id="@+id/iv_photo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:scaleType="fitXY"
        tools:src="@drawable/ic_person"
        android:background="@color/grey"
        android:layout_marginBottom="10dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/tv_name" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_name"
        android:textSize="26sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/guest_email"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_edit_button"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_button"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:paddingHorizontal="20dp"
        android:paddingVertical="4dp"
        android:background="@color/grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>