<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="12dp"
    android:paddingVertical="24dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.feature.profile.EditProfileFragment">

    <com.google.android.material.imageview.ShapeableImageView
        app:shapeAppearance="@style/ShapeAppearance.Material3.Tooltip"
        android:id="@+id/iv_photo"
        android:layout_width="130dp"
        android:layout_height="130dp"
        tools:src="@drawable/ic_person"
        android:scaleType="fitXY"
        android:background="@color/grey"
        android:layout_marginBottom="10dp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintBottom_toTopOf="@id/tv_edit_photo_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_edit_photo_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_photo_button"
        android:textColor="#F20645AD"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/tv_name"
        app:layout_constraintTop_toBottomOf="@id/iv_photo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/et_name"
        app:layout_constraintTop_toBottomOf="@id/tv_edit_photo_button"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@id/tv_email"
        app:layout_constraintTop_toBottomOf="@id/tv_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@id/et_email"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:inputType="textWebEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/tv_save"
        app:layout_constraintTop_toBottomOf="@id/tv_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_profile"
        android:textSize="18sp"
        android:layout_marginTop="40dp"
        android:textColor="@color/black"
        android:paddingHorizontal="40dp"
        android:paddingVertical="6dp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@id/et_email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>